🔄 Добавлена проверка подписки через Telegram Bot API

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 SECRET_KEY=supersecretkey
-DATABASE_URL=sqlite:///promo.db
 JWT_SECRET_KEY=anothersecret
+DATABASE_URL=postgresql://promo_db_gt00_user:zuMXWB6HSmGD9CIsk5ZrfGrsSusboHnp@dpg-d12tdvbe5dus73cpnakg-a/promo_db_gt00
